Resolves: tdf#128811 Alignment option "Distributed" not working in calc

Change-Id: I605b62ef0dfa29db93e4d7df8285a05a12bda8e3
Reviewed-on: https://gerrit.libreoffice.org/83272
Tested-by: Jenkins
Reviewed-by: Xisco Faulí <xiscofauli@libreoffice.org>