cui/source/tabpages/align.cxx
@@ -201,6 +201,7 @@ bool AlignmentTabPage::FillItemSet( SfxItemSet* rSet )
                 eJustify = SvxCellHorJustify::Right;
                 break;
             case ALIGNDLG_HORALIGN_BLOCK:
+            case ALIGNDLG_HORALIGN_DISTRIBUTED:
                 eJustify = SvxCellHorJustify::Block;
                 break;
             case ALIGNDLG_HORALIGN_FILL:
@@ -235,6 +236,7 @@ bool AlignmentTabPage::FillItemSet( SfxItemSet* rSet )
                 eJustify = SvxCellVerJustify::Bottom;
                 break;
             case ALIGNDLG_VERALIGN_BLOCK:
+            case ALIGNDLG_VERALIGN_DISTRIBUTED:
                 eJustify = SvxCellVerJustify::Block;
                 break;
         }
